--- a/package.json
+++ b/package.json
@@ -1,16 +1,57 @@
 {
   "name": "flatland-site-reactjs",
-  "version": "0.1.0",
+  "version": "3.0.0",
   "private": true,
+  "license": "MIT",
+  "author": "Flatland Church",
   "dependencies": {
+    "@flatland/chokhmah": "^1.8.4",
+    "body-parser": "^1.18.3",
+    "classnames": "^2.2.6",
+    "compression": "^1.7.3",
+    "connected-react-router": "^4.5.0",
+    "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
+    "history": "^4.7.2",
+    "ignore-styles": "^5.0.1",
+    "isomorphic-fetch": "^2.2.1",
+    "lodash": "^4.17.11",
+    "md5-file": "^4.0.0",
+    "morgan": "^1.9.1",
+    "prop-types": "^15.6.2",
+    "qs": "^6.5.2",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
-    "react-scripts": "1.1.5"
+    "react-frontload": "^1.0.3",
+    "react-helmet": "^5.2.0",
+    "react-lazy-load-image-component": "^1.1.2",
+    "react-loadable": "^5.5.0",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "1.1.5",
+    "recompose": "^0.30.0",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:server": "NODE_ENV=production node server/index.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.4",
+    "babel-plugin-dynamic-import-node": "^2.1.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "nodemon": "^1.18.4",
+    "webpack": "^4.20.2",
+    "webpack-node-externals": "^1.7.2"
   }
 }
