--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-lazy-load-image-component": "^1.1.2",
     "react-loadable": "^5.5.0",
     "react-redux": "^5.0.7",
+    "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "recompose": "^0.30.0",
