--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flatland-site-reactjs",
-  "version": "3.1.0",
+  "version": "3.1.1",
   "private": true,
   "license": "MIT",
   "author": "Flatland Church",
@@ -55,5 +55,8 @@
     "nodemon": "^1.18.4",
     "webpack": "^4.20.2",
     "webpack-node-externals": "^1.7.2"
+  },
+  "resolutions": {
+    "**/event-stream": "^4.0.1"
   }
 }
