--- a/package.json
+++ b/package.json
@@ -53,10 +53,15 @@
   },
   "devDependencies": {
     "nodemon": "^1.18.4",
-    "webpack": "^4.20.2",
     "webpack-node-externals": "^1.7.2"
   },
   "resolutions": {
     "**/event-stream": "^4.0.1"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
