--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Flatland Church",
   "dependencies": {
     "@flatland/chokhmah": "^1.9.1",
-    "babel-core": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.4",
     "babel-plugin-dynamic-import-node": "^2.2.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
