--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
   "name": "flatland-site-reactjs",
-  "version": "3.1.1",
+  "version": "3.1.2",
   "private": true,
   "license": "MIT",
   "author": "Flatland Church",
   "dependencies": {
+    "@babel/core": "^7.1.6",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.1.6",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
     "@flatland/chokhmah": "^1.9.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.4",
     "babel-plugin-dynamic-import-node": "^2.2.0",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-register": "^6.26.0",
+    "babel-preset-react-app": "^6.1.0",
     "body-parser": "^1.18.3",
     "classnames": "^2.2.6",
     "compression": "^1.7.3",
@@ -38,7 +42,7 @@
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.0",
+    "react-scripts": "2.0.3",
     "recompose": "^0.30.0",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
@@ -58,6 +62,9 @@
   },
   "resolutions": {
     "**/event-stream": "^4.0.1"
+  },
+  "peerDependencies": {
+    "babel-core": "6.x || ^7.0.0-bridge.0"
   },
   "browserslist": [
     ">0.2%",
