--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flatland-site-reactjs",
-  "version": "3.1.2",
+  "version": "3.2.0",
   "private": true,
   "license": "MIT",
   "author": "Flatland Church",
@@ -25,6 +25,7 @@
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "focus-trap": "^3.0.0",
     "history": "^4.7.2",
     "ignore-styles": "^5.0.1",
     "isomorphic-fetch": "^2.2.1",
