Made several modifications - Split events out into its own redux module and set up single event pages to fetch data from redux if its already there, rather than making a call - Added a subscribe button to Blog - Added support for a select input in DynamicForm

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "prop-types": "^15.6.2",
     "qs": "^6.5.2",
     "react": "^16.5.0",
+    "react-aria-modal": "^3.0.1",
     "react-dom": "^16.5.0",
     "react-frontload": "^1.0.3",
     "react-helmet": "^5.2.0",
@@ -44,6 +45,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.3",
+    "react-select": "^2.3.0",
     "recompose": "^0.30.0",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
