--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "connected-react-router": "^4.5.0",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
+    "dot-prop": "^5.0.0",
     "express": "^4.16.3",
     "focus-trap": "^3.0.0",
     "history": "^4.7.2",
@@ -49,6 +50,7 @@
     "recompose": "^0.30.0",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^4.2.0",
     "uuid": "^3.3.2"
   },
   "scripts": {
