Added video to the homepage

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-react-app": "^6.1.0",
     "body-parser": "^1.18.3",
+    "bowser": "^2.7.0",
     "classnames": "^2.2.6",
     "compression": "^1.7.3",
     "connected-react-router": "^4.5.0",
